--- a/Course1/Project2/index.html
+++ b/Course1/Project2/index.html
@@ -8,5 +8,42 @@
 </head>
 <body>
     
+    <h1 id = "title">freeCodeCamp Survey Form</h1>
+    <p id="description">Thank you for taking the time to help us improve the platform </p>
+    <main id = "main">
+    <form id="survey-form">
+        <label for="name" id = "name-label">Name</label>
+        <input type="text" name="name" id="name" placeholder="Enter your name">
+        <label for="email" id = "email-label">Email</label>
+        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your email">
+        <label for="age" id = "number-label">Age</label>
+        <input type="number" id="number" name="age" min="18" max="120" placeholder="Enter your age">
+        <label for="dropdown">Which option best describes your current role?</label>
+        <select name="dropdown" id="dropdown">
+            <option disabled selected value>Select current role</option>
+            <option value ="Student">Student</option>
+            <option value ="Job">Full Time Job</option>
+            <option value ="Learner">Full time learner</option>
+            <option value ="preferNo">Prefer not to say</option>
+        </select>
+        <p>Would you recommend freeCodeCamp to a friend?</p>
+        <label><input name="user-recommend" value="definitely" type="radio" class="input-radio" checked="">Definitely 
+        </label>
+        <label><input name="user-recommend" value="maybe" type="radio" class="input-radio" checked="">Maybe 
+        </label>
+        <label><input name="user-recommend" value="not-sure" type="radio" class="input-radio" checked="">Not-Sure 
+        </label>
+        <p>What would you like to see improved?
+        <span class="clue">(Check all that apply)</span></p><label>
+        <input name="prefer" value="front-end-projects" type="checkbox" class="input-checkbox">Front-end Projects</label>
+        <label><input name="prefer" value="back-end-projects" type="checkbox" class="input-checkbox">Back-end Projects</label>
+        <label><input name="prefer" value="data-visualization" type="checkbox" class="input-checkbox">Data Visualization</label>
+        <label><input name="prefer" value="challenges" type="checkbox" class="input-checkbox">Challenges</label>
+        <p>Any comments or suggestions?</p>
+        <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..."></textarea>
+        <button type="submit" id="submit" class="submit-button">Submit
+        </button>
+    </form>
+</main>
 </body>
 </html>
