--- a/Course1/Project2/index.html
+++ b/Course1/Project2/index.html
@@ -13,13 +13,13 @@
     <main id = "main">
     <form id="survey-form">
         <label for="name" id = "name-label">Name</label>
-        <input type="text" name="name" id="name" placeholder="Enter your name">
+        <input type="text" name="name" id="name" placeholder="Enter your name" class="form-control" required >
         <label for="email" id = "email-label">Email</label>
-        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your email">
+        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your email" class="form-control" required>
         <label for="age" id = "number-label">Age</label>
-        <input type="number" id="number" name="age" min="18" max="120" placeholder="Enter your age">
+        <input type="number" id="number" name="age" min="18" max="120" class="form-control" placeholder="Enter your age">
         <label for="dropdown">Which option best describes your current role?</label>
-        <select name="dropdown" id="dropdown">
+        <select name="dropdown" id="dropdown" class="form-control">
             <option disabled selected value>Select current role</option>
             <option value ="Student">Student</option>
             <option value ="Job">Full Time Job</option>
@@ -27,20 +27,20 @@
             <option value ="preferNo">Prefer not to say</option>
         </select>
         <p>Would you recommend freeCodeCamp to a friend?</p>
-        <label><input name="user-recommend" value="definitely" type="radio" class="input-radio" checked="">Definitely 
+        <label><input name="user-recommend" value="definitely" type="radio" class="input-radio" checked="" class="form-control">Definitely 
         </label>
-        <label><input name="user-recommend" value="maybe" type="radio" class="input-radio" checked="">Maybe 
+        <label><input name="user-recommend" value="maybe" type="radio" class="input-radio" checked="" class="form-control">Maybe 
         </label>
-        <label><input name="user-recommend" value="not-sure" type="radio" class="input-radio" checked="">Not-Sure 
+        <label><input name="user-recommend" value="not-sure" type="radio" class="input-radio" checked="" class="form-control">Not-Sure 
         </label>
         <p>What would you like to see improved?
         <span class="clue">(Check all that apply)</span></p><label>
-        <input name="prefer" value="front-end-projects" type="checkbox" class="input-checkbox">Front-end Projects</label>
-        <label><input name="prefer" value="back-end-projects" type="checkbox" class="input-checkbox">Back-end Projects</label>
-        <label><input name="prefer" value="data-visualization" type="checkbox" class="input-checkbox">Data Visualization</label>
-        <label><input name="prefer" value="challenges" type="checkbox" class="input-checkbox">Challenges</label>
+        <input name="prefer" value="front-end-projects" type="checkbox" class="input-checkbox" class="form-control">Front-end Projects</label>
+        <label><input name="prefer" value="back-end-projects" type="checkbox" class="input-checkbox" class="form-control">Back-end Projects</label>
+        <label><input name="prefer" value="data-visualization" type="checkbox" class="input-checkbox" class="form-control">Data Visualization</label>
+        <label><input name="prefer" value="challenges" type="checkbox" class="input-checkbox" class="form-control">Challenges</label>
         <p>Any comments or suggestions?</p>
-        <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..."></textarea>
+        <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..." class="form-control"></textarea>
         <button type="submit" id="submit" class="submit-button">Submit
         </button>
     </form>
